WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
265265
[UIAsyncTextInput] Edit menu doesn't appear after choosing "Select" in editable content
https://bugs.webkit.org/show_bug.cgi?id=265265
Summary
[UIAsyncTextInput] Edit menu doesn't appear after choosing "Select" in editab...
Wenson Hsieh
Reported
2023-11-22 13:43:22 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-11-22 13:43:39 PST
<
rdar://problem/118726761
>
Wenson Hsieh
Comment 2
2023-11-22 14:06:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20836
EWS
Comment 3
2023-11-25 10:00:27 PST
Committed
271114@main
(457b73ca23e9): <
https://commits.webkit.org/271114@main
> Reviewed commits have been landed. Closing PR #20836 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug